  1.6.1
  -----
  [!] 404 installation problem
  [+] new permission: "Ability to modify profile"
  [+] new project name: Mibew Messenger
  [!] fixed localization of dates for all languages
  [!] fixed online/offline image for groups

  1.6.0
  -----
  [+] completely new layout of all administrator pages, XHTML 1.0
  [+] New awaiting users and chat log pages
  [+] right menu, show/hide menu on awaiting users page, nice locale chooser
  [+] main page: warning if database is outdated (after install)
  [+] "Updates": news, link to the latest version
  [+] Operator's profile page
  [+] Configurable pre-chat survey
  [+] Create/edit/remove groups
  [+] Canned messages page
  [+] Statistics page
  [+] Popup dialog notification of the new visitor (turned off by default)
  [+] Send message option: enter vs ctrl-enter
  [!] Slow loading of awating visitors page

  1.5.2
  -----
  [+] Ability to disable sound notifications for chat (toolbar button) 
  [+] Switch to SSL in chat (should be enabled in "Settings -> Optional Services")
  [!] lost query parameters after login redirect
  [+] added referrer into button code
  [+] ability to add text for operator into button code, define visitor's name and email
  [!] geolocation on IPs in history
  [!] Translation UI: added sorting, filters, fixed several problems
  [+] New chat buttons

  1.5.1
  -----
  [!] significant optimization of chat window (both themes), reduced number of images and their sizes
  [+] tabs in settings: Optional Services, Themes preview
  [+] better French and Spanish translations, additional languages are stored separately
  [+] detect Chrome browser, show its version
  [!] reverted order in title, removed available_locales variable from config.php (detect automatically)
  [!] return English message by default (when translation for other language is absent)
  [!] problems with styles, fixed error messages in avatar uploading
  [+] nice confirmation when form is saved

  1.5.0
  -----