@@ -249,6 +249,7 @@ page.group.no_such=No such group
 page.group.title=Group details
 page.groupmembers.intro=View and edit the member list.
 page.groupmembers.title=Members
+page.groups.confirm=Are you sure that you want to delete group "{0}"?
 page.groups.intro=This page displays a list of groups in your company. Each group can have separate button and canned responses.
 page.groups.new=Create new group...
 page.groups.title=Groups
@@ -288,6 +289,7 @@ page_agent.title=Operator details
 page_agents.agent_commonname=International name
 page_agents.agent_name=Name
 page_agents.agents=Full list of operators:
+page_agents.confirm=Are you sure that you want to delete operator "{0}"?
 page_agents.intro=This page displays a list of company operators.
 page_agents.login=Login
 page_agents.new_agent=Add operator...
