@@ -16,13 +16,23 @@ require_once("inc_menu.php");
 $page['title'] = getlocal("page_agents.title");
 $page['menuid'] = "operators";
 
-function tpl_content() { global $page, $webimroot;
+function tpl_header() { global $page, $webimroot;
+?>	
+<script type="text/javascript" language="javascript" src="<?php echo $webimroot ?>/js/jquery-1.3.2.min.js"></script>
+<?php
+}
+
+function tpl_content() { global $page, $webimroot, $errors;
 ?>
 
 <?php echo getlocal("page_agents.intro") ?>
 <br />
 <br />
+<?php 
+require_once('inc_errors.php');
+?>
 
+<?php if($page['canmodify']) { ?>
 <div class="tabletool">
 	<img src='<?php echo $webimroot ?>/images/buttons/createagent.gif' border="0" alt="" />
 	<a href='<?php echo $webimroot ?>/operator/operator.php' title="<?php echo getlocal("page_agents.new_agent") ?>">
@@ -30,7 +40,7 @@ function tpl_content() { global $page, $webimroot;
 	</a>
 </div>
 <br clear="all"/>
-
+<?php } ?>
 
 <table class="list">
 <thead>
@@ -41,6 +51,9 @@ function tpl_content() { global $page, $webimroot;
 	<?php echo getlocal("page_agents.agent_name") ?>
 </th><th>
 	<?php echo getlocal("page_agents.agent_commonname") ?>
+<?php if($page['canmodify']) { ?>
+</th><th>
+<?php } ?>
 </th>
 </tr>
 </thead>
@@ -48,7 +61,7 @@ function tpl_content() { global $page, $webimroot;
 <?php foreach( $page['allowedAgents'] as $a ) { ?>
 <tr>
 	<td class="notlast">
-   		<a href="<?php echo $webimroot ?>/operator/operator.php?op=<?php echo $a['operatorid'] ?>" class="man">
+   		<a id="ti<?php echo $a['operatorid'] ?>" href="<?php echo $webimroot ?>/operator/operator.php?op=<?php echo $a['operatorid'] ?>" class="man">
    			<?php echo htmlspecialchars(topage($a['vclogin'])) ?>
    		</a>
 	</td>
@@ -58,10 +71,23 @@ function tpl_content() { global $page, $webimroot;
 	<td>
    		<?php echo htmlspecialchars(topage($a['vccommonname'])) ?>
 	</td>
+<?php if($page['canmodify']) { ?>
+	<td>
+		<a class="removelink" id="i<?php echo $a['operatorid'] ?>" href="<?php echo $webimroot ?>/operator/operators.php?act=del&amp;id=<?php echo $a['operatorid'] ?>">
+			remove
+		</a>
+	</td>
+<?php } ?>	
 </tr>
 <?php } ?>
 </tbody>
 </table>
+<script type="text/javascript" language="javascript"><!--
+$('a.removelink').click(function(){
+	var login = $("#t"+this.id).text();
+	return confirm("<?php echo getlocalforJS("page_agents.confirm", array('"+$.trim(login)+"')) ?>");
+});
+//--></script>
 
 <?php 
 } /* content */
