@@ -16,13 +16,23 @@ require_once("inc_menu.php");
 $page['title'] = getlocal("page.groups.title");
 $page['menuid'] = "groups";
 
-function tpl_content() { global $page, $webimroot;
+function tpl_header() { global $page, $webimroot;
+?>	
+<script type="text/javascript" language="javascript" src="<?php echo $webimroot ?>/js/jquery-1.3.2.min.js"></script>
+<?php
+}
+
+function tpl_content() { global $page, $webimroot, $errors;
 ?>
 
 <?php echo getlocal("page.groups.intro") ?>
 <br />
 <br />
+<?php 
+require_once('inc_errors.php');
+?>
 
+<?php if($page['canmodify']) { ?>
 <div class="tabletool">
 	<img src='<?php echo $webimroot ?>/images/buttons/createdep.gif' border="0" alt="" />
 	<a href='<?php echo $webimroot ?>/operator/group.php' title="<?php echo getlocal("page.groups.new") ?>">
@@ -30,7 +40,7 @@ function tpl_content() { global $page, $webimroot;
 	</a>
 </div>
 <br clear="all"/>
-
+<?php } ?>
 
 <table class="list">
 <thead>
@@ -41,7 +51,9 @@ function tpl_content() { global $page, $webimroot;
 	<?php echo getlocal("form.field.groupdesc") ?>
 </th><th>
 	<?php echo getlocal("page.group.membersnum") ?>
+<?php if($page['canmodify']) { ?>
 </th><th>
+<?php } ?>
 </th>
 </tr>
 </thead>
@@ -51,7 +63,7 @@ if(count($page['groups']) > 0) {
 	foreach( $page['groups'] as $grp ) { ?>
 <tr>
 	<td class="notlast">
-   		<a href="<?php echo $webimroot ?>/operator/group.php?gid=<?php echo $grp['groupid'] ?>" class="man">
+   		<a href="<?php echo $webimroot ?>/operator/group.php?gid=<?php echo $grp['groupid'] ?>" id="ti<?php echo $grp['groupid'] ?>" class="man">
    			<?php echo htmlspecialchars(topage($grp['vclocalname'])) ?>
    		</a>
 	</td>
@@ -63,11 +75,13 @@ if(count($page['groups']) > 0) {
 	   		<?php echo htmlspecialchars(topage($grp['inumofagents'])) ?>
    		</a>
 	</td>
+<?php if($page['canmodify']) { ?>
 	<td>
-		<a href="<?php echo $webimroot ?>/operator/groups.php?act=del&amp;gid=<?php echo $grp['groupid'] ?>">
+		<a href="<?php echo $webimroot ?>/operator/groups.php?act=del&amp;gid=<?php echo $grp['groupid'] ?>" id="i<?php echo $grp['groupid'] ?>" class="removelink">
 			remove
 		</a>
 	</td>
+<?php } ?>
 </tr>
 <?php 
 	}
@@ -83,6 +97,12 @@ if(count($page['groups']) > 0) {
 ?>
 </tbody>
 </table>
+<script type="text/javascript" language="javascript"><!--
+$('a.removelink').click(function(){
+	var groupname = $("#t"+this.id).text();
+	return confirm("<?php echo getlocalforJS("page.groups.confirm", array('"+$.trim(groupname)+"')) ?>");
+});
+//--></script>
 
 <?php 
 } /* content */
